--- a/food.html
+++ b/food.html
@@ -25,18 +25,47 @@
       <h2>Food</h2>
      </div>
   </section>
+  <main>
+  <div id="food_paragraph">
+    <p>Italian cuisine boasts a diverse and delectable array of dishes, capturing the essence of regional flavors and culinary traditions. From the iconic pasta, ranging from comforting spaghetti Bolognese to delicate fettuccine Alfredo, to the aromatic risottos and their rich, creamy textures, Italy's culinary landscape is a symphony of taste and technique. Pizza, with its thin crust and endless topping possibilities, is a global favorite, while dishes like arancini showcase the creativity in transforming rice into delightful, deep-fried spheres. From the simplicity of bruschetta to the complexity of osso buco, Italian cuisine thrives on fresh, high-quality ingredients and a profound respect for culinary heritage, making it a cherished and diverse culinary experience for food enthusiasts worldwide.</p>
+  </div>
   <section class="food_menu">
     <div class="food_row">
-      <div class="food"></div>
-      <div class="food"></div>
-      <div class="food"></div>
+      <div class="food">
+        <h2 class="food_name">Pasta</h2>
+        <p class="food_description">Pasta, an Italian staple, is a versatile dish made from durum wheat or other grains. Boiled to al dente perfection, it pairs with a variety of sauces, making it a simple, affordable, and beloved choice worldwide.</p>
+        <img class="food_pic" src="assets/Pasta-italy.jpg" alt="pasta">
+      </div>
+      <div class="food">
+        <h2 class="food_name">Pizza</h2>
+        <p class="food_description">Pizza, an iconic Italian creation, features a thin crust topped with tomato sauce, cheese, and various toppings. Baked to perfection, it's a globally cherished comfort food known for its delicious simplicity.</p>
+        <img class="food_pic" src="assets/Pizza-italy.png" alt="pizza">
+      </div>
+      <div class="food">
+        <h2 class="food_name">Risotto</h2>
+        <p class="food_description">Risotto, an Italian rice dish, is cooked to creamy perfection with broth and wine. Its rich, velvety texture makes it a luxurious comfort food, often complemented by ingredients like mushrooms or Parmesan.</p>
+        <img class="food_pic" src="assets/Risotto_italy.jpg" alt="risotto">
+      </div>
     </div>
-    <div class="food_row">
-      <div class="food"></div>
-      <div class="food"></div>
-      <div class="food"></div>
+    <div class="food_row" style="margin-top: 300px;">
+      <div class="food">
+        <h2 class="food_name">Focaccia</h2>
+        <p class="food_description">Focaccia, an Italian flatbread, is known for its airy texture and olive oil-infused crust. Topped with herbs, salt, or other ingredients, it's a flavorful and versatile accompaniment or snack.</p>
+        <img class="food_pic" src="assets/Focaccia_italy.jpg" alt="focaccia">
+      </div>
+      <div class="food">
+        <h2 class="food_name">Lasagna</h2>
+        <p class="food_description">Lasagna, an Italian layered pasta dish, combines sheets of pasta with rich meat or vegetable sauce, creamy béchamel, and melted cheese. Baked to perfection, it's a hearty and satisfying comfort food.</p>
+        <img class="food_pic" src="assets/Lasagna-italy.jpg" alt="Lasagna">
+      </div>
+      <div class="food">
+        <h2 class="food_name">Arancini</h2>
+        <p class="food_description">Arancini, Italian rice balls, are a delectable treat. Typically stuffed with cheese, meat, or vegetables, they are coated in breadcrumbs and deep-fried to crispy perfection, offering a delightful burst of flavors.</p>
+        <img class="food_pic" src="assets/Arancini_italy.jpg" alt="arancini">
+      </div>
     </div>
   </section>
+</main>
   <script src="script.js"></script>
 </body>
 
