--- a/history.html
+++ b/history.html
@@ -9,17 +9,17 @@
 </head>
 
 <body>
-    <header>
-  <nav>
-    <ul>
-        <li><a href="index.html">Home</a></li>
-        <li> <a href="attractions.html">Attractions</a></li>
-        <li><a href="food.html">Food</a></li>
-        <li><a href ="#">History</a></li>
-    </ul>
-  </nav>
-</header>
-  <h1>History</h1>
+  <header>
+    <nav>
+      <ul>
+          <li><a href="index.html" id="Ht">Home</a></li>
+          <li><a href="attractions.html" id="At">Attractions</a></li>
+          <li><a href="food.html" id="Ft">Food</a></li>
+          <li><a href ="#" id="Htt">History</a></li>
+      </ul>
+    </nav>
+  </header>
+  
   <script src="script.js"></script>
 </body>
 
