--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </nav>
 </header>
 
-<div class="container">
+<div class="container1">
   <img src="/assets/italy-seaside.jpg" alt ="italy"width=100%>
   <div class="hero">
     <h1>Italy</h1>
