Pre checked project

--- a/food.html
+++ b/food.html
@@ -66,6 +66,12 @@
     </div>
   </section>
 </main>
+<footer>
+  <div>
+  <img src="/assets/Flag_of_Italy.jpg" alt="Italy Flag" ></img>
+  <p>By Makram Dergham <br><a href="mailto:derghammakram@gmail.com">derghammakram@gmail.com</a></p>
+</div>
+</footer>
   <script src="script.js"></script>
 </body>
 
