--- a/attractions.html
+++ b/attractions.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Germany</title>
+  <title>Italy</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -87,6 +87,12 @@
     </div>
   </section>
 </main>
+<footer>
+  <div>
+  <img src="/assets/Flag_of_Italy.jpg" alt="Italy Flag" ></img>
+  <p>By Makram Dergham <br><a href="mailto:derghammakram@gmail.com">derghammakram@gmail.com</a></p>
+</div>
+</footer>
   <script src="script.js"></script>
 </body>
 
