--- a/history.html
+++ b/history.html
@@ -19,7 +19,84 @@
       </ul>
     </nav>
   </header>
-  
+  <section>
+    <img src="assets/italy history.jpg" alt="Italy history" id="history_pic">
+    <div class="hero2">
+     <h2>History</h2>
+    </div>
+  </section>
+  <main>
+  <div class="sidebar">
+    
+  </div>
+  <secion>
+    <p style="margin-top: 50px;">Italy, with a history spanning over millennia, has played a central role in shaping the cultural and political landscape of Europe. From the legendary origins of Rome to the height of the Roman Empire, Italy has been a cradle of civilization. The medieval period saw the rise of powerful city-states, and the Renaissance marked a cultural resurgence. Unification in 1861 brought about a modern nation-state. Italy navigated the challenges of the 20th century, transitioning from monarchy to republic in 1946. Today, Italy stands as a blend of ancient heritage and contemporary influence, renowned for its art, cuisine, and historical significance.</p>
+    <div class="history_container">
+      <div>
+        <h1>The Etruscans</h1>
+        <p>Around 800BC, the Etruscans arrived in Italy and were skilled craftsmen, metal workers, seafarers, and merchants. They traded with Greeks and Romans, leading to the flourishing of Etruria, a confederation of 12 city-states. They celebrated sacred rites, used divination, and had a hearty appetite for life. The Etruscans influenced Roman art and were praised as "founders of cities."</p>
+      </div>
+      <img src="assets/the etruscans.jpg" alt="The Etrucans" class="right_image">
+    </div>
+    <div class="history_container">
+      <img src="assets/the romans.jpg" alt="The Romans" class="left_image">
+      <div>
+        <h1>The Romans</h1>
+        <p>Rome, founded by Romulus in 753BC, was a patrician republic under Etruscan domination. Its aristocracy drew strength from a solid aristocracy. Roman power extended throughout the Mediterranean, winning victories in the Punic Wars and conquests in Macedonia, Asia Minor, Spain, and southern France. Julius Caesar's reformist dictatorship led to civil war and the beginning of the Roman Empire.</p>
+      </div>
+    </div>
+    <div class="history_container">
+      <div>
+        <h1>The Rise of Florence and the Medici</h1>
+        <p>The Renaissance, a 15th-century art and architecture revolution, began in Florence, a commercial and financial center based on the wool trade. The Medici, influential patrons of art and culture, created magnificent churches, palaces, and works of art. They also established the first public library and Platonic Academy, inspiring artists like Donatello and Michelangelo.</p>
+      </div>
+      <img src="assets/the medici.jpg" alt="Medici" class="right_image">
+    </div>
+    <div class="history_container">
+      <img src="assets/roman baroque.jpg" alt="Roman Baroque" class="left_image">
+      <div>
+        <h1>Roman Baroque</h1>
+        <p>The Baroque art movement, originating in Rome from 1600-1750, was influenced by a papal campaign to make Rome a city of beauty. Michelangelo Merisi da Caravaggio was renowned for his realistic portraits and religious paintings, while Gianlorenzo Bernini's St Peter's Church decoration was more accepted.</p>
+      </div>
+    </div>
+  </secion>
+  <section id="timeline">
+    <h1 id="timeline_title">Italy historical timeline</h1>
+<ul id="timeline_list">
+    <li style="--accent-color:#41516C" class="card">
+        <div class="date">509 BC</div>
+        <div class="title">Founding of the Roman Republic</div>
+        <div class="descr">Rome becomes a republic, marking the establishment of a republican form of government.</div>
+    </li>
+    <li style="--accent-color:#FBCA3E" class="card">
+        <div class="date">58-48 BC</div>
+        <div class="title">Julius Caesar's Conquests and Assassination</div>
+        <div class="descr">Julius Caesar's conquest of Gaul, crossing the Rubicon, becoming dictator, and his assassination in 44 BC. This period represents a significant turning point in Roman history.</div>
+    </li>
+    <li style="--accent-color:#E24A68" class="card">
+        <div class="date">476 AD</div>
+        <div class="title">Fall of the Western Roman Empire</div>
+        <div class="descr">End of the Western Roman Empire, marking the fall of ancient Rome.</div>
+    </li>
+    <li style="--accent-color:#1B5F8C" class="card">
+        <div class="date">1861</div>
+        <div class="title">Unification of Italy</div>
+        <div class="descr">Victor Emmanuel II of Savoy is proclaimed King of Italy, signifying the unification of Italy.</div>
+    </li>
+    <li style="--accent-color:#4CADAD" class="card">
+        <div class="date">1946</div>
+        <div class="title">Birth of the Italian Republic</div>
+        <div class="descr">Italy is declared a republic after the abdication of King Victor Emmanuel III, marking the end of the monarchy and the establishment of the modern Italian state.</div>
+    </li>
+</ul>
+  </section>
+</main>
+<footer>
+  <div>
+  <img src="/assets/Flag_of_Italy.jpg" alt="Italy Flag" ></img>
+  <p>By Makram Dergham <br><a href="mailto:derghammakram@gmail.com">derghammakram@gmail.com</a></p>
+</div>
+</footer>
   <script src="script.js"></script>
 </body>
 
