Guide To My Country

--- a/food.html
+++ b/food.html
@@ -65,6 +65,55 @@
       </div>
     </div>
   </section>
+  <section>
+    <h2 style="margin-top: 350px; margin-bottom: 50px; font-size: 40px;">Italian Dining Etiquette: Do's and Don'ts</h2>
+    <div class="table">
+      <div class="table_row">
+        <div class="cell" style="color:blue; text-align: center;">Do's</div>
+        <div class="cell" style="color:red; text-align: center;">Don'ts</div>
+      </div>
+      <div class="table_row">
+        <div class="cell">
+          <h4>Napkin Use</h4>
+          <p>Place the napkin on your lap upon sitting, and use it to wipe your mouth. In fine dining, try not to tuck the napkin into your collar.</p>
+        </div>
+        <div class="cell">
+          <h4>Split Bills</h4>
+          <p>In traditional Italian culture, it's not common to split bills. One person often pays, and others reciprocate in the future.</p>
+        </div>
+      </div>
+      <div class="table_row">
+        <div class="cell">
+          <h4>Espresso After Meals</h4>
+          <p>It's common to have espresso after a meal. However, cappuccino is typically a breakfast drink and is not commonly ordered after 11 a.m.</p>
+        </div>
+        <div class="cell">
+          <h4>Arrive Late</h4>
+          <p>Punctuality is appreciated, especially if you're invited to someone's home. Arriving fashionably late is not as common as in some other cultures.</p>
+        </div>
+      </div>
+      <div class="table_row">
+        <div class="cell">
+          <h4>Compliment the Cook</h4>
+          <p>If you're dining in someone's home, it's polite to compliment the cook on the meal.</p>
+        </div>
+        <div class="cell">
+          <h4>Tip Excessively</h4>
+          <p>Tipping in Italy is not as common or as high as in some other countries. Service charges are often included in the bill.</p>
+        </div>
+      </div>
+      <div class="table_row">
+        <div class="cell">
+          <h4>Use Utensils Properly</h4>
+          <p>Follow the lead of others at the table regarding utensil use. Generally, use the outermost utensils first and work your way in with each course.</p>
+        </div>
+        <div class="cell">
+          <h4>Cut Spaghetti</h4>
+          <p>Cutting spaghetti with a knife is considered improper. Twirl it around your fork instead.</p>
+        </div>
+      </div>
+    </div>
+  </section>
 </main>
 <footer>
   <div>
