--- a/attractions.html
+++ b/attractions.html
@@ -20,7 +20,7 @@
     </nav>
   </header>
   <section>
-    <img src="assets/pisa_tower.jpg" alt="pisa tower" id="pisa_tower">
+    <img src="assets/pisa_tower.jpg" alt="pisa tower" id="pisa_tower" onmouseover="currentSlide(1)">
     <div class="hero2">
      <h2>Attractions</h2>
     </div>
@@ -30,7 +30,7 @@
     <p class="type">Italy, a top-notch destination for tourists, is known for its incredible mix of history, stunning scenery, and delicious food. From the ancient wonders of Rome to the art treasures of Florence, and the romantic canals of Venice, there's something for everyone. The country's countryside, dotted with vineyards and olive groves, offers a peaceful escape, while the coastlines, like the Amalfi Coast, are simply breathtaking. Italian cuisine, with its pasta, pizza, and regional dishes, is a treat for the taste buds. With warm hospitality and a perfect blend of history, art, and nature, Italy guarantees unforgettable experiences for every traveler.</p>
   </div>
   <section>
-    <h1>Colosseum</h1>
+    <h1 style="margin-top: 50px;">Colosseum</h1>
     <div class="attraction">
       <img src="assets/colosseum.png" alt="colosseum" class="attractionPic">
       <p class="attractionText">The Colosseum, an iconic Roman amphitheater built between AD 72 and AD 80, hosted gladiator contests and other spectacles. Its elliptical design and ornate columns showcase Roman architectural brilliance. Despite facing natural disasters over the centuries, the Colosseum remains a symbol of Rome's cultural legacy, attracting tourists with its historic allure.</p>
@@ -63,17 +63,17 @@
      <div class="slideshow-container">
       <div class="mySlides fade">
         <div class="numbertext">1 / 3</div>
-        <img src="assets/Milan.jpg" style="width:100%;">
+        <img src="assets/Milan.jpg" style="width:100%;" alt="Milan">
         <div class="text">Milan</div>
       </div>
       <div class="mySlides fade">
         <div class="numbertext">2 / 3</div>
-        <img src="/assets/Venice.jpg" style="width:100%">
+        <img src="/assets/Venice.jpg" style="width:100%" alt="Venice">
         <div class="text">Venice</div>
       </div>
       <div class="mySlides fade">
         <div class="numbertext">3 / 3</div>
-        <img src="assets/Palermo.jpg" style="width:100%">
+        <img src="assets/Palermo.jpg" style="width:100%" alt="Palermo">
         <div class="text">Palermo</div>
       </div>
       <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
