--- a/attractions.html
+++ b/attractions.html
@@ -19,8 +19,8 @@
       </ul>
     </nav>
   </header>
-  <section>
-    <img src="assets/pisa_tower.jpg" alt="pisa tower" id="pisa_tower" onmouseover="currentSlide(1)">
+  <section class="top_page">
+    <img src="assets/pisa_tower.jpg" alt="pisa tower" id="pisa_tower" >
     <div class="hero2">
      <h2>Attractions</h2>
     </div>
@@ -93,7 +93,7 @@
   <p>By Makram Dergham <br><a href="mailto:derghammakram@gmail.com">derghammakram@gmail.com</a></p>
 </div>
 </footer>
-  <script src="script.js"></script>
+  <script src="attractions.js"></script>
 </body>
 
 </html>
