--- a/food.html
+++ b/food.html
@@ -19,7 +19,7 @@
       </ul>
     </nav>
   </header>
-  <section>
+  <section class="top_page">
     <img src="assets/Italian_food.jpg" alt="pizza" id="italian_food">
     <div class="hero2">
       <h2>Food</h2>
