--- a/history.html
+++ b/history.html
@@ -19,7 +19,7 @@
       </ul>
     </nav>
   </header>
-  <section>
+  <section class="top_page">
     <img src="assets/italy history.jpg" alt="Italy history" id="history_pic">
     <div class="hero2">
      <h2>History</h2>
